# ChangeLog for net-misc/chrony
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/chrony/ChangeLog,v 1.159 2015/04/29 09:18:51 ago Exp $

  29 Apr 2015; Agostino Sarubbo <ago@gentoo.org> chrony-1.31.1.ebuild:
  Stable for sparc, wrt bug #545918

  26 Apr 2015; Pacho Ramos <pacho@gentoo.org> chrony-1.31.1.ebuild:
  ppc stable wrt bug #545918

*chrony-2.0_pre2 (23 Apr 2015)

  23 Apr 2015; Jeroen Roovers <jer@gentoo.org> -chrony-2.0_pre1.ebuild,
  +chrony-2.0_pre2.ebuild:
  Version bump.

  23 Apr 2015; Agostino Sarubbo <ago@gentoo.org> chrony-1.31.1.ebuild:
  Stable for x86, wrt bug #545918

  23 Apr 2015; Agostino Sarubbo <ago@gentoo.org> chrony-1.31.1.ebuild:
  Stable for amd64, wrt bug #545918

  21 Apr 2015; Jeroen Roovers <jer@gentoo.org> chrony-1.31.1.ebuild:
  Stable for PPC64 too.

  21 Apr 2015; Jeroen Roovers <jer@gentoo.org> chrony-1.31.1.ebuild:
  Stable for HPPA (bug #545918).

*chrony-1.31.1 (21 Apr 2015)

  21 Apr 2015; Jeroen Roovers <jer@gentoo.org> -chrony-1.31-r1.ebuild,
  +chrony-1.31.1.ebuild:
  Version bump (bug #545918).

  30 Jan 2015; Jeroen Roovers <jer@gentoo.org> chrony-2.0_pre1.ebuild:
  Drop keywords on pre-release for now.

*chrony-2.0_pre1 (30 Jan 2015)

  30 Jan 2015; Jeroen Roovers <jer@gentoo.org> +chrony-2.0_pre1.ebuild:
  Version bump.

*chrony-1.31-r1 (30 Jan 2015)

  30 Jan 2015; Jeroen Roovers <jer@gentoo.org> +chrony-1.31-r1.ebuild:
  Fix configure logic with regard to readline/libedit (bug #538190 by Brian
  Evans).

  05 Nov 2014; Jeroen Roovers <jer@gentoo.org> -chrony-1.30-r1.ebuild,
  -files/chronyd.service, -files/chronyd.service-r1:
  Old.

  02 Nov 2014; Sven Vermeulen <swift@gentoo.org> chrony-1.31.ebuild:
  Remove sec-policy/selinux-* dependency from DEPEND but keep in RDEPEND (bug
  #527698)

  01 Nov 2014; Agostino Sarubbo <ago@gentoo.org> chrony-1.31.ebuild:
  Stable for ppc, wrt bug #525114
